HTML-Sistema-Loja

--- a/modulo1/html-sistema-loja/ctrl-estoque.html
+++ b/modulo1/html-sistema-loja/ctrl-estoque.html
@@ -36,10 +36,10 @@
         </tr>
 
         <tr>
-            <td><img src="img/ak-47.jpg" alt="ak-47"/></td>
-            <td> Ak-47 </td>
-            <td> 13.133 </td>
-            <td> 1.333 </td>
+            <td><img src="img/camiseta-vermelha-sem-estampa.jpg" alt="camiseta vermelha sem estampa"/></td>
+            <td> Camiseta Vermelha Básica </td>
+            <td> 131 </td>
+            <td> 50 </td>
         </tr>
 
         <tr>
