HTML-Sistema-Loja

--- a/modulo1/html-sistema-loja/ctrl-estoque.html
+++ b/modulo1/html-sistema-loja/ctrl-estoque.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <p>Loja da Causa Operária</p>
+        <p>Sháin Vestuário</p>
     </div>
     
     <div>
@@ -29,40 +29,47 @@
         </tr>
 
         <tr>
-            <td><img src="img/boné comunista.jpg" alt="boné comunista"/></td>
-            <td> Boné Comunista </td>
-            <td> 50 </td>
-            <td> 13 </td>
+            <td><img src="img/bandana.jpg" alt="bandana preta estampada"/></td>
+            <td> Bandana estampada </td>
+            <td> 25 </td>
+            <td> 78 </td>
         </tr>
 
         <tr>
             <td><img src="img/camiseta-vermelha-sem-estampa.jpg" alt="camiseta vermelha sem estampa"/></td>
             <td> Camiseta Vermelha Básica </td>
-            <td> 131 </td>
-            <td> 50 </td>
+            <td> 70 </td>
+            <td> 45 </td>
         </tr>
 
         <tr>
-            <td><img src="img/bandeira urss.jpg" alt=""/>bandeira urss</td>
-            <td> Bandeira URSS </td>
-            <td> 5 </td>
-            <td> 133 </td>
+            <td><img src="img/coturno.jpg" alt="coturno preto"/></td>
+            <td> Coturno preto </td>
+            <td> 57 </td>
+            <td> 89 </td>
         </tr>
 
         <tr>
-            <td><img src="img/pinga 51.png" alt="pinga 51"/></td>
-            <td> Pinga 51 </td>
-            <td> 51 </td>
+            <td><img src="img/mascara.jpg" alt="mascara preta"/></td>
+            <td> Máscara preta </td>
             <td> 15 </td>
+            <td> 50 </td>
         </tr>
         
         <!-- Crie mais uma linha desta tabela abaixo \/ -->
 
         <tr>
-            <td><img src="img/caldo knorr.png" alt="Tempero Knorr"/></td>
-            <td> Tempero Knorr </td>
-            <td> 1,50 </td>
-            <td> 500 </td>
+            <td><img src="img/oculos preto.jpg" alt="oculos preto"/></td>
+            <td> Óculos preto </td>
+            <td> 35 </td>
+            <td> 100 </td>
+        </tr>
+
+        <tr>
+            <td><img src ="img/short brahma.jpg" alt="shor brahma"/></td>
+            <td> Short Brahma masculino </td>
+            <td> 46 </td>
+            <td> 65 </td>
         </tr>
 
     </table>
