--- a/modulo1/html-sistema-loja/funcionarios.html
+++ b/modulo1/html-sistema-loja/funcionarios.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <p>Loja da Causa Operária</p>
+        <p>Sháin Vestuário</p>
     </div>
     
     <div>
@@ -21,9 +21,9 @@
     <h2>Funcionários</h2>
     <!-- Crie uma lista de funcionários usando as tags que você aprendeu hoje abaixo \/ -->
     <ol> 
-        <li>Lula Silva</li>
-        <li>Bolsonaro Messias</li>
-        <li>Arthur do Val</li>
+        <li>Cleiton</li>
+        <li>Tony Stark</li>
+        <li>Alan Turing</li>
     </ol>
         
 </body>
