--- a/modulo1/html-sistema-loja/index.html
+++ b/modulo1/html-sistema-loja/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Loja da Causa Operária</title>
+    <title>Sháin Vestuário</title>
 </head>
 <body>
     <div>
-        <h1>Bem-vind@ a <em>Loja da Causa Operária</em>!</h1>
+        <h1>Bem-vind@ a <em>Sháin Vestuário</em>!</h1>
         <p>Frase de chamada para sua loja</p>
     </div>
 
