HTML-Sistema-Loja

--- a/modulo1/html-sistema-loja/add-produto.html
+++ b/modulo1/html-sistema-loja/add-produto.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./styles.css"/>
     <title>Adicionar Produto</title>
 </head>
 <body>
     <div>
-        <p>Sháin Vestuário</p>
+        <h1 class="inicio3">Sháin Vestuário</h1>
     </div>
     
     <div>
-        <a href="index.html">Página Inicial</a>
-        <a href="ctrl-estoque.html">Controle de Estoque</a>
-        <a href="add-produto.html">Adicionar Produto</a>
-        <a href="funcionarios.html">Funcionários</a>
+        <button><a href="index.html">Página Inicial</button></a>
+        <button><a href="ctrl-estoque.html">Controle de Estoque</button></a>
+        <button><a href="add-produto.html">Adicionar Produto</button></a>
+        <button><a href="funcionarios.html">Funcionários</button></a>
     </div>
 
     
-    <h2>Adicionar Produto</h2>
+    <h3 class="adc-produto">Adicionar Produto</h3>
     <form action="">
         <div>
             <label for="link-foto">Link para foto: </label>
@@ -48,6 +49,8 @@
             <!-- Adicione ao type do botão abaixo o valor para que ele submeta o formulário -->
             <button type="submit">Adicionar</button>
         </div>
+        <div class="bottom3">
+            <h4>@shain.vestuario - 2022</h4>
 
     </form>
 
