--- a/modulo1/html-sistema-loja/ctrl-estoque.html
+++ b/modulo1/html-sistema-loja/ctrl-estoque.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./styles.css"/>
     <title>Controle de Estoque</title>
 </head>
 <body>
     <div>
-        <p>Sháin Vestuário</p>
+        <h1 class="inicio5">Sháin Vestuário</h1>
     </div>
     
     <div>
-        <a href="index.html">Página Inicial</a>
-        <a href="ctrl-estoque.html">Controle de Estoque</a>
-        <a href="add-produto.html">Adicionar Produto</a>
-        <a href="funcionarios.html">Funcionários</a>
+        <button><a href="index.html">Página Inicial</button></a>
+        <button><a href="ctrl-estoque.html">Controle de Estoque</button></a>
+        <button><a href="add-produto.html">Adicionar Produto</button></a>
+        <button><a href="funcionarios.html">Funcionários</button></a>
     </div>
 
-    <h2>Controle de Estoque</h2>
+    <h3 class="inicio2">Controle de Estoque</h3>
 
     <table>
         <tr>
@@ -73,6 +74,8 @@
         </tr>
 
     </table>
+    <div class="bottom2">
+        <h4>@shain.vestuario - 2022</h4>
 
 </body>
 </html>
