--- a/modulo1/html-sistema-loja/funcionarios.html
+++ b/modulo1/html-sistema-loja/funcionarios.html
@@ -4,27 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./styles.css"/>
     <title>Funcionários</title>
 </head>
 <body>
     <div>
-        <p>Sháin Vestuário</p>
+        <h1 class="inicio4">Sháin Vestuário</h1>
     </div>
     
     <div>
-        <a href="index.html">Página Inicial</a>
-        <a href="ctrl-estoque.html">Controle de Estoque</a>
-        <a href="add-produto.html">Adicionar Produto</a>
-        <a href="funcionarios.html">Funcionários</a>
+        <button><a href="index.html">Página Inicial</button></a>
+        <button><a href="ctrl-estoque.html">Controle de Estoque</button></a>
+        <button><a href="add-produto.html">Adicionar Produto</button></a>
+        <button><a href="funcionarios.html">Funcionários</button></a>
     </div>
 
-    <h2>Funcionários</h2>
+    <h3 class="funcionarios">Funcionários</h3>
     <!-- Crie uma lista de funcionários usando as tags que você aprendeu hoje abaixo \/ -->
-    <ol> 
+    <h4>
+        <ul> 
         <li>Cleiton</li>
         <li>Tony Stark</li>
         <li>Alan Turing</li>
-    </ol>
+        </ul>
+    </h4>
+    <div class="bottom1">
+        <h4>@shain.vestuario - 2022</h4>
+    </div>
         
 </body>
 </html>
