--- a/modulo1/html-sistema-loja/index.html
+++ b/modulo1/html-sistema-loja/index.html
@@ -4,33 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./styles.css"/>
     <title>Sháin Vestuário</title>
 </head>
 <body>
-    <div>
+
+    <header>
+
+    <div class="inicio">
         <h1>Bem-vind@ a <em>Sháin Vestuário</em>!</h1>
-        <p>Frase de chamada para sua loja</p>
+        <p>A marca que você procura!</p>
     </div>
 
     <div>
-        <a href="index.html">Página Inicial</a>
-        <a href="ctrl-estoque.html">Controle de Estoque</a>
-        <a href="add-produto.html">Adicionar Produto</a>
-        <a href="funcionarios.html">Funcionários</a>
+        <button><a href="index.html">Página Inicial</button></a>
+        <button><a href="ctrl-estoque.html">Controle de Estoque</button></a>
+        <button><a href="add-produto.html">Adicionar Produto</button></a>
+        <button><a href="funcionarios.html">Funcionários</button></a>
     </div>
+
+    </header>
 
     <div>
         <!-- ADICIONAR INFORMAÇOES SOBRE SUA LOJINHA -->
+        <img src="./img/Sháin Vestuário.png">
     </div>
+
+<footer>
 
     <div>
         <p>Siga-nos nas redes sociais!</p>
 
         <div>
-            <img src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
+            <img id="icon1" src="img/whatsapp.png"/>
+            <img id="icon2" src="img/facebook.png"/>
+            <img id="icon3" src="img/instagram.png"/>
         </div>
     </div>
+    <div class="bottom">
+        <h4>@shain.vestuario - 2022</h4>
+    </div>
+
+</footer>
+
 </body>
 </html>
