HTML-Sistema-Loja

--- a/modulo1/html-sistema-loja/add-produto.html
+++ b/modulo1/html-sistema-loja/add-produto.html
@@ -8,16 +8,17 @@
     <title>Adicionar Produto</title>
 </head>
 <body>
+    <header class="header1">
     <div>
         <h1 class="inicio3">Sháin Vestuário</h1>
     </div>
-    
     <div>
         <button><a href="index.html">Página Inicial</button></a>
         <button><a href="ctrl-estoque.html">Controle de Estoque</button></a>
         <button><a href="add-produto.html">Adicionar Produto</button></a>
         <button><a href="funcionarios.html">Funcionários</button></a>
     </div>
+</header>
 
     
     <h3 class="adc-produto">Adicionar Produto</h3>
