--- a/modulo1/html-sistema-loja/ctrl-estoque.html
+++ b/modulo1/html-sistema-loja/ctrl-estoque.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./styles.css"/>
+    <link rel="stylesheet" href="./styles.css" />
     <title>Controle de Estoque</title>
 </head>
+
 <body>
     <header class="header2">
-    <div>
-        <h1 class="inicio5">Sháin Vestuário</h1>
-    </div>
-    
-    <div>
-        <button><a href="index.html">Página Inicial</button></a>
-        <button><a href="ctrl-estoque.html">Controle de Estoque</button></a>
-        <button><a href="add-produto.html">Adicionar Produto</button></a>
-        <button><a href="funcionarios.html">Funcionários</button></a>
-    </div>
-</header>
+        <div>
+            <h1 class="inicio5">Sháin Vestuário</h1>
+        </div>
+
+        <div>
+            <button><a href="index.html">Página Inicial</button></a>
+            <button><a href="ctrl-estoque.html">Controle de Estoque</button></a>
+            <button><a href="add-produto.html">Adicionar Produto</button></a>
+            <button><a href="funcionarios.html">Funcionários</button></a>
+        </div>
+    </header>
 
     <h3 class="inicio2">Controle de Estoque</h3>
 
@@ -32,44 +34,45 @@
         </tr>
 
         <tr>
-            <td><img class="img1"src="img/bandana.jpg" alt="bandana preta estampada"/></td>
+            <td><img class="img1" src="img/bandana.jpg" alt="bandana preta estampada" /></td>
             <td> Bandana estampada </td>
             <td> 25 </td>
             <td> 78 </td>
         </tr>
 
         <tr>
-            <td><img class="img2"src="img/camiseta-vermelha-sem-estampa.jpg" alt="camiseta vermelha sem estampa"/></td>
+            <td><img class="img2" src="img/camiseta-vermelha-sem-estampa.jpg" alt="camiseta vermelha sem estampa" />
+            </td>
             <td> Camiseta Vermelha Básica </td>
             <td> 70 </td>
             <td> 45 </td>
         </tr>
 
         <tr>
-            <td><img class="img3" src="img/coturno.jpg" alt="coturno preto"/></td>
+            <td><img class="img3" src="img/coturno.jpg" alt="coturno preto" /></td>
             <td> Coturno preto </td>
             <td> 57 </td>
             <td> 89 </td>
         </tr>
 
         <tr>
-            <td><img class="img4" src="img/mascara.jpg" alt="mascara preta"/></td>
+            <td><img class="img4" src="img/mascara.jpg" alt="mascara preta" /></td>
             <td> Máscara preta </td>
             <td> 15 </td>
             <td> 50 </td>
         </tr>
-        
+
         <!-- Crie mais uma linha desta tabela abaixo \/ -->
 
         <tr>
-            <td><img class="img5" src="img/oculos preto.jpg" alt="oculos preto"/></td>
+            <td><img class="img5" src="img/oculos preto.jpg" alt="oculos preto" /></td>
             <td> Óculos preto </td>
             <td> 35 </td>
             <td> 100 </td>
         </tr>
 
         <tr>
-            <td><img class ="img6" src="img/short brahma.jpg" alt="shor brahma"/></td>
+            <td><img class="img6" src="img/short brahma.jpg" alt="shor brahma" /></td>
             <td> Short Brahma masculino </td>
             <td> 46 </td>
             <td> 65 </td>
@@ -80,4 +83,5 @@
         <h4>@shain.vestuario - 2022</h4>
 
 </body>
+
 </html>
