Texto da tabela alinhada usando text-align

--- a/modulo1/css-bugfixes/home.html
+++ b/modulo1/css-bugfixes/home.html
@@ -15,7 +15,7 @@
     <div>
         <div class="container" id="container-de-descricao">
             <br><br><br><br><br>
-            <p> Somos uma empresa focada em tornar a compra de roupas mais fácil </p>
+            <p> Somos uma empresa focada <br> em tornar a compra de <br> roupas mais fácil </p>
             <ol>
                 <li> Ache os melhores descontos </li>
                 <li> Busque pelos seus gostos</li>
@@ -25,8 +25,8 @@
 
         <div class="container" id="container-para-comprar">
             <p> BORA COMEÇAR A </p>
-            <br>
-            <a href="comprar.html"><button class="botao-amarelo" > COMPRAR </button></a>
+            <br><br><br><br><br>
+            <a href="comprar.html"><button class="botao-amarelo"> COMPRAR </button></a>
         </div>
     </div>
 </body>
